<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="DUT_ST_InfoDataFB" Id="{d5fcf9cc-fc5c-43d6-821e-99e21ae1613b}">
    <Declaration><![CDATA[TYPE DUT_ST_InfoDataFB :
STRUCT
	// Safety FBs use this structure
	usiMapState 		: 	USINT ;
	uiMapDiag  			: 	UINT ;	
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>